# open-cb-aux

./: CMakeLists.txt  LICENSE  Main.cpp  README.md
ip/headers/: ImageProcessing.h
ip/sources/: ImageProcessing.cpp
test/headers/: Test.h
test/sources/: Test.cpp
ua/headers/: MainWindow.h  UserApplication.h
ua/sources/: MainWindow.cpp  UserApplication.cpp
var/headers/: ValidationAndResponse.h
var/sources/: ValidationAndResponse.cpp
